package EzyShop.model.orders;

public enum ChannelCode {
    DANA,
    GOPAY,
    BCA_VIRTUAL_ACCOUNT,
    QRIS,
    CARDS,
    XENDIT
}
