package EzyShop.model.orders;

public enum OrderStatus {
    PAID,
    CANCELED,
    PROCESSING,
    SHIPPED,
    DELIVERED,
    PENDING_PAYMENT,
    EXPIRED
}
